--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="es">
 <head>
 <meta charset="utf-8" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div>
-<h1>Mapa de lenguas quechuas con código ISO</h1>
+<h1 style="font-family: "Noto Serif", serif;">Mapa de lenguas quechuas con código ISO</h1>
 <iframe
   src="map_iso_quechua.html"
-  width="100%"
-  height="600px"
+  width="80%"
+  height="70%"
   style="border:none;">
 </iframe>
 </div>
