--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <iframe
   src="map_iso_quechua.html"
   width="80%"
-  height="100%"
+  height="800px"
   style="border:none;">
 </iframe>
 </div>
